0302 In game screen functionality: solved team 2 not showing the selected robot.

--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,30 @@ body {
 
 }
 
+/* CSS' styles that IDK how to classify */
+
+.Selected_Robot {
+
+    -webkit-filter: grayscale(100%); 
+    filter: grayscale(100%);
+
+}
+
+.robotData {
+    background-color: white;
+
+    height: 2em;
+    width: 19em;
+
+    justify-content: center center;
+    align-items: center;
+    text-align: center;    
+
+    font-size: 1em;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+
 /* NAVBAR */
 
 /* NAVBAR ROBOTS IDs */
@@ -816,6 +840,9 @@ body {
     justify-content: center;
     align-items: center;
 
+    
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+
 }
 .screen_menu_settings {
     background-color: whitesmoke;
@@ -828,6 +855,9 @@ body {
     justify-content: center;
     align-items: center;
 
+    
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+
 }
 .screen_menu_exit {
     background-color: whitesmoke;
@@ -839,6 +869,9 @@ body {
     flex-direction: row;
     justify-content: center;
     align-items: center;
+
+    
+    font-family: Verdana, Geneva, Tahoma, sans-serif;   
 
 }
 
@@ -870,6 +903,8 @@ body {
     align-items: center;
     justify-content: center;
 
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+
 
 
 }
@@ -884,6 +919,20 @@ body {
     
     display: flex;
     flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+
+}
+
+.screen_selection_indicator {
+    background-color: transparent;
+
+
+    height: 15vh;
+    width: 100vw;
+
+    display: flex;
+    flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
 
